# forseti

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  renovate.json  repo-structure.yaml
forseti-harness/: Makefile  README.md  harness_utils.py  pyproject.toml
forseti-harness/capture_spine/: shared_validation.py
forseti-harness/cleaning/: __init__.py  _shared.py  basenotes.py  basenotes_lake.py  content.py  core.py  fragrantica.py  fragrantica_lake.py  legacy.py  models.py  parfumo.py  parfumo_lake.py  raw_model_transport.py  retail_pdp.py  retail_review_overlap.py  tiktok_audience_evidence_extractor.py  tiktok_audience_evidence_lake.py  tiktok_silver_analytics.py  transcript_product_extractor.py  transcript_product_lake.py
forseti-harness/config/: retail_grid_monitored_brands.json
forseti-harness/data_lake/: __init__.py  canonical_json.py  catalog.py  company_surface.py  consumption.py  creator_audience_queue.py  creator_metric_lineage.py  creator_registry.py  creator_registry_sqlite.py  derived_retrieval_cache.py  derived_retrieval_state.py  derived_retrieval_views.py  inventory.py  lake_touchpoint_inventory_v0.json  lane_registry.py  product_mention_selection.py  reddit_subreddit_registry.py  root.py  silver_census.py  silver_compatibility.py  silver_lineage.py  silver_record.py  sov_readout.py
forseti-harness/docs/: adapter_author_contract.md  source_capture_agent_runbook.md  source_capture_packet.md  source_observability_operator_records.md  source_observability_scalability_note.md
orca-harness/: README.md  pyproject.toml
(+2906 files in other folders)
