[project]
name = "forseti-harness"
version = "0.14.0"
description = "Deterministic Step A judgment harness rebuild for Forseti"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.13,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.44,<2",
]
cloakbrowser = [
  "cloakbrowser>=0.3.31,<0.4",
]

[tool.setuptools]
py-modules = ["harness_utils"]

[tool.setuptools.packages.find]
include = [
  "cleaning",
  "data_lake",
  "ecr",
  "evidence_binding",
  "reports",
  "capture_spine",
  "capture_spine.*",
  "runners",
  "schemas",
  "scoring",
  "signal_content",
  "source_capture",
  "source_capture.*",
  "source_observability",
]
exclude = [
  "reports.product_learning",
  "reports.product_learning.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
